// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom buildResources and output dirs: linux 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": 1,
      "file": "TestApp-1.1.0-x86_64.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
    },
  ],
}
`;

exports[`custom buildResources and output dirs: mac 1`] = `
Object {
  "mac": Array [],
}
`;

exports[`custom buildResources and output dirs: win 1`] = `
Object {
  "win": Array [
    Object {
      "arch": 1,
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`do not exclude build entirely (respect files) 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`electronDist as path to local folder with electron builds zipped  1`] = `
Object {
  "linux": Array [],
}
`;

exports[`override targets in the config - only arch 1`] = `
Object {
  "win": Array [
    Object {
      "arch": null,
      "file": "beta.yml",
    },
    Object {
      "arch": 0,
      "file": "Test App ßW Setup 1.0.0-beta.1.exe",
      "safeArtifactName": "TestApp-Setup-1.0.0-beta.1.exe",
    },
  ],
}
`;

exports[`override targets in the config - only arch 2`] = `
Object {
  "channel": "beta",
  "provider": "generic",
  "url": "https://develar.s3.amazonaws.com/test",
}
`;

exports[`override targets in the config - only arch 3`] = `
Object {
  "githubArtifactName": "TestApp-Setup-1.0.0-beta.1.exe",
  "path": "Test App ßW Setup 1.0.0-beta.1.exe",
  "version": "1.0.0-beta.1",
}
`;

exports[`override targets in the config 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`prepackaged 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`retrieve latest electron version 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`scheme validation 1`] = `
"Config is invalid:
{
  \\"foo\\": \\"Unknown option\\",
  \\"mac\\": [
    {
      \\"foo\\": \\"Unknown option\\"
    },
    \\"Invalid option object\\"
  ]
}

How to fix:
  1. Open https://github.com/electron-userland/electron-builder/wiki/Options
  2. Search the option name on the page.
    * Not found? The option was deprecated or not exists (check spelling).
    * Found? Check that the option in the appropriate place. e.g. \\"title\\" only in the \\"dmg\\", not in the root.
"
`;

exports[`scheme validation 2 1`] = `
"Config is invalid:
{
  \\"appId\\": \\"Should be null,string\\"
}

How to fix:
  1. Open https://github.com/electron-userland/electron-builder/wiki/Options
  2. Search the option name on the page.
    * Not found? The option was deprecated or not exists (check spelling).
    * Found? Check that the option in the appropriate place. e.g. \\"title\\" only in the \\"dmg\\", not in the root.
"
`;

exports[`scheme validation extraFiles 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": 1,
      "file": "TestApp-1.1.0-x86_64.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
    },
    Object {
      "arch": 0,
      "file": "TestApp-1.1.0-ia32.zip",
      "safeArtifactName": "TestApp-1.1.0-ia32.zip",
    },
  ],
}
`;
